Added Forms Authentication to Blazor App.

--- a/src/WebFormsApplicationWithBlazorApplication/WebFormsApplication/bin/WebFormsApplication.dll.config
+++ b/src/WebFormsApplicationWithBlazorApplication/WebFormsApplication/bin/WebFormsApplication.dll.config
@@ -35,13 +35,13 @@
 		<membership defaultProvider="SqlProvider" userIsOnlineTimeWindow="120">
 			<providers>
 				<clear />
-				<add name="SqlProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ASPNETDB" applicationName="FullPOS" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="true" passwordFormat="Hashed" minRequiredPasswordLength="5" minRequiredNonalphanumericCharacters="0" />
+				<add name="SqlProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ASPNETDB" applicationName="WebFormsApplication" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="true" passwordFormat="Hashed" minRequiredPasswordLength="5" minRequiredNonalphanumericCharacters="0" />
 			</providers>
 		</membership>
 		<roleManager enabled="true" defaultProvider="SqlRoleProvider">
 			<providers>
 				<clear />
-				<add name="SqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ASPNETDB" applicationName="FullPOS" />
+				<add name="SqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ASPNETDB" applicationName="WebFormsApplication" />
 			</providers>
 		</roleManager>
 	</system.web>
